--- a/application/resources/css/stylesPerfil.css
+++ b/application/resources/css/stylesPerfil.css
@@ -53,7 +53,7 @@ and open the template in the editor.
 /* MENSAJES */
 .mensaje-A, .mensaje-B {
     margin: 20px;
-    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     
 }
@@ -63,13 +63,99 @@ and open the template in the editor.
 }
 .mensaje-A {
     background-color: #99ccff;
-    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 .mensaje-B {
     background-color: #bbff99;
-    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 .textarea {
     width:100%;
     height:100%;
+}
+.mensajes > div{
+}
+/*||||||||||||||||||||*/
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100");
+
+h1 {
+    font-size: 2em;
+    line-height: 1.4em;
+    text-align: center;
+    padding: 0.5em;
+}
+section {
+    zoom: 1;
+    position: relative;
+    height: auto;
+}
+section:after,
+section:before {
+    content: "";
+    display: table;
+}
+section:after {
+    clear: both;
+}
+section h4 {
+    background: gainsboro;
+    cursor: pointer;
+    /*border: 1px solid rgba(0,0,0,0.2);*/
+    border-top: none;
+    padding: 15px 20px;
+}
+section h4:first-child {
+    /*border-top: 1px solid rgba(0,0,0,0.2);*/
+}
+@media screen and (min-width: 600px) {
+    section h4 {
+        position: relative;
+        width: 10%;
+        height: 20%;
+        display: block;
+    }
+}
+section ul {
+    zoom: 1;
+    position: relative;
+    height: auto;
+    min-height: 100%;
+/*    border: 1px solid rgba(0,0,0,0.2);*/
+    border-left: none;
+    display: none;
+
+}
+section ul:after,
+section ul:before {
+    content: "";
+    display: table;
+}
+section ul:after {
+    clear: both;
+}
+section ul li {
+    list-style: circle;
+}
+@media screen and (min-width: 600px) {
+    section ul {
+        position: absolute;
+        width: 90%;
+        right: 0;
+        top: 0;
+        padding: 15px 30px;
+    }
+}
+section .active {
+    cursor: default;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-right: none;
+}
+@media screen and (min-width: 600px) {
+    section .active {
+        background: rgba(0,0,0,0);
+        border-right: 1px solid rgba(0,0,0,0);
+    }
+}
+section .active + ul {
+    display: block;
 }
