Proyecto final + cambios
Signed-off-by: hitek13 <13planetas.enanos@gmail.com>

--- a/application/resources/css/stylesPerfil.css
+++ b/application/resources/css/stylesPerfil.css
@@ -159,3 +159,10 @@ section .active {
 section .active + ul {
     display: block;
 }
+.inLineItem{
+    display: inline;
+}
+.ajustar{
+    /* QUITAR */
+    /*height: 400px;*/
+}
